# arc

./: .gitignore  README.md  main.py  pyproject.toml
src/arc/: __init__.py  app.py  cli.py  errors.py  git.py  models.py  paths.py  render.py  runlog.py  store.py  text.py  timeutil.py
src/arc/commands/: __init__.py  archive.py  base.py  commit.py  fail.py  hyp.py  init.py  instruction.py  interrupt.py  new.py  promote.py  rehyp.py  rename.py  report.py  result.py  show.py  status.py  submit.py  tail.py  tree.py  unhyp.py  verdict.py
src/arc/executors/: __init__.py  base.py  noop.py
src/arc/tasks/: __init__.py  base.py  default.py  registry.py
src/arc/tasks/parameter_golf/: __init__.py  base_program.md  cached_challenge_fineweb.py  default_task.md  log_wrapper.py  modal_app.py  prepare_entrypoint.py  runtime.py
src/arc/tasks/parameter_golf/instructions/: base_program.md  create_submission.md  default_task.md
tests/: test_edit_commands.py  test_hyp_commands.py  test_instruction.py  test_interrupt_command.py  test_parameter_golf_runtime.py  test_render.py
