[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "arc"
version = "0.1.0"
description = "Experiment tracker and orchestrator for autoresearch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
arc = "arc.cli:main"

[tool.uv]
package = true
